xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__absent_context_in_function.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_xpath(\"function() { . }\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPDY0002,
            message: Some(
                "Component absent in dynamic context.",
            ),
        },
        span: Some(
            SourceSpan(
                13,
                14,
            ),
        ),
    },
)
