xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__cast_illegal_simple_type.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"1 cast as xs:NOTATION\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPST0080,
            message: Some(
                "Invalid target type of cast or castable expression.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                21,
            ),
        ),
    },
)
