xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__empty_sequence.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_xpath(\"()\")"
---
Ok(
    Spanned {
        value: FunctionDefinition(
            FunctionDefinition {
                params: [
                    Param {
                        name: Name(
                            "v0",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v1",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                    Param {
                        name: Name(
                            "v2",
                        ),
                        type_: None,
                        default: None,
                        required: false,
                        original_name: None,
                        tunnel: false,
                    },
                ],
                return_type: None,
                body: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                EmptySequence,
                            ),
                            span: 0..2,
                        },
                    ),
                    span: 0..2,
                },
            },
        ),
        span: 0..2,
    },
)
