xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__for_expr.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"for $x in 1 return 2\")"
---
Ok(
    Spanned {
        value: Map(
            Map {
                context_names: ContextNames {
                    item: Name(
                        "v1",
                    ),
                    position: Name(
                        "v2",
                    ),
                    last: Name(
                        "v3",
                    ),
                },
                var_atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: 10..11,
                },
                return_expr: Spanned {
                    value: Atom(
                        Spanned {
                            value: Const(
                                Integer(
                                    2,
                                ),
                            ),
                            span: 19..20,
                        },
                    ),
                    span: 19..20,
                },
            },
        ),
        span: 0..20,
    },
)
