xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__for_expr2.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"for $x in (1, 2) return $x + 1\")"
---
Ok(
    Spanned {
        value: Let(
            Let {
                name: Name(
                    "v2",
                ),
                var_expr: Spanned {
                    value: Binary(
                        Binary {
                            left: Spanned {
                                value: Const(
                                    Integer(
                                        1,
                                    ),
                                ),
                                span: 11..12,
                            },
                            op: Comma,
                            right: Spanned {
                                value: Const(
                                    Integer(
                                        2,
                                    ),
                                ),
                                span: 14..15,
                            },
                        },
                    ),
                    span: 10..15,
                },
                return_expr: Spanned {
                    value: Map(
                        Map {
                            context_names: ContextNames {
                                item: Name(
                                    "v3",
                                ),
                                position: Name(
                                    "v4",
                                ),
                                last: Name(
                                    "v5",
                                ),
                            },
                            var_atom: Spanned {
                                value: Variable(
                                    Name(
                                        "v2",
                                    ),
                                ),
                                span: 10..15,
                            },
                            return_expr: Spanned {
                                value: Binary(
                                    Binary {
                                        left: Spanned {
                                            value: Variable(
                                                Name(
                                                    "v3",
                                                ),
                                            ),
                                            span: 24..26,
                                        },
                                        op: Add,
                                        right: Spanned {
                                            value: Const(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                            span: 29..30,
                                        },
                                    },
                                ),
                                span: 24..30,
                            },
                        },
                    ),
                    span: 0..30,
                },
            },
        ),
        span: 0..30,
    },
)
